# openscad_parser

./: .gitignore  CLAUDE.md  PRD.md  README.rst  foo.py  pyproject.toml
.claude/skills/review-code/: SKILL.md
.github/workflows/: publish.yml  pytest.yml
docs/: EXAMPLE_SOURCE_MAP.md  PRETTY_PRINTING.md  SCOPING_RULES.md
examples/: 01_basic_parsing.py  02_find_module_calls.py  03_extract_assignments.py  04_scope_analysis.py  05_json_round_trip.py
openscad_parser/: __init__.py
openscad_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/openscad_parser/: __init__.py  ast.py  cli.py  grammar.py
src/openscad_parser/ast/: __init__.py  builder.py  nodes.py  pretty_print.py  scope.py  serialization.py  source_map.py
tests/: README.md  __init__.py  conftest.py  test_assignments.py  test_ast_convenience.py  test_ast_generation.py  test_builder.py  test_cli.py  test_complex.py  test_control_structures.py  test_expressions.py  test_lexical.py  test_modules.py  test_nodes.py  test_pretty_print.py  test_scope.py  test_serialization.py  test_source_map.py  test_vectors.py
