[build-system]
requires = ["uv_build>=0.8.22,<=0.9.20"]
build-backend = "uv_build"

[project]
name = "openscad_parser"
version = "0.9.5"
description = "A PEG parser to read OpenSCAD language source code, with optional AST tree generation."
readme = "README.rst"
authors = [
  { name="Revar Desmera", email="revarbat@gmail.com" },
]
maintainers = [
  { name="Revar Desmera", email="revarbat@gmail.com" },
]
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["openscad", "openscad parser", "parser"]
dependencies = [
    "arpeggio>=2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
"Homepage" = "https://github.com/belfryscad/openscad_parser"
"Repository" = "https://github.com/belfryscad/openscad_parser"
"Bug Tracker" = "https://github.com/belfryscad/openscad_parser/issues"
"Releases" = "https://github.com/belfryscad/openscad_parser/releases"
"Usage" = "https://github.com/belfryscad/openscad_parser/README.rst"
"Documentation" = "https://github.com/belfryscad/openscad_parser/WRITING_DOCS.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
